--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
         body {
             margin: 0;
         }
+
         #wrapper {
             border: 1px solid black;
             width: 100%;
             height: 100vh;
             margin: 0 auto;
         }
+
         .hide {
             border: 1px solid black;
             margin-top: 100px;
@@ -21,7 +23,7 @@
             border-radius: 4px;
             margin: 100px auto 50px auto;
             padding: 5px;
-            background-color: rgba(255,255,255,0.5);
+            background-color: rgba(255, 255, 255, 0.5);
         }
 
         #startBtn {
@@ -32,18 +34,21 @@
             text-decoration: none;
             border-radius: 5px;
         }
+
         .hide1 {
             width: 80%;
             margin: 100px auto 20px auto;
         }
-        .logo{
+
+        .logo {
             float: right;
-            position:  absolute;
+            position: absolute;
             top: 0;
             left: 0;
             z-index: -1;
             width: 100%;
         }
+
         .logo img {
             width: 100%;
         }
@@ -52,7 +57,7 @@
 <body>
 <div>
     <div id="wrapper">
-        <div id="welcomeScreen" class="hide" >
+        <div id="welcomeScreen" class="hide">
             <h1> Ai la trieu phu</h1>
             <a id="startBtn" href="index2.html">Start</a>
         </div>
